<resources>
    <string name="app_name">IMT Calculator+</string>
    <string name="age">Вік</string>
    <string name="height">Зріст</string>
    <string name="weight">Вага</string>
    <string name="button1">Розрахувати</string>
    <string name="underweight">16 та менше Виражений дефіцит маси тіла</string>
    <string name="Insufficient">16-18,5 Недостатня (дефіцит) маса тіла</string>
    <string name="Norm">18,5-25 Норма</string>
    <string name="preobesity">25-30 Надмірна маса тіла (запобігання)</string>
    <string name="firstDegree">30-35 Ожиріння першого ступеня</string>
    <string name="secondDegree">35-40 Ожиріння другого ступеня</string>
    <string name="thirdDegree">40 і більше Ожиріння третього ступеня (морбідне)</string>
    <string name="dialog_1">Dialog </string>
    <string name="message_text">Чи влаштовує вас ваша вага?</string>
    <string name="yes">Так</string>
    <string name="no">Ні</string>
    <string name="maybe">Maybe</string>
    <string name="result">Результат</string>
    <string name="link1">ЯК ХАРЧУВАТИСЯ, ЩОБ НАБРАТИ М`ЯЗОВУ МАСУ! 7 ЗАКОНІВ</string>
    <string name="link2">10 ГОЛОВНИХ ПОМИЛОК ПРИ НАБОРІ МАСИ</string>
    <string name="link3">Фітнес клуб преміум клас</string>
    <string name="link4">Ви завжди вважали собі занадто худим? Шкіра та кістки? У ту годину, коли більшості необхідно скинути вес, набрати його може бути дуже складним завданням.Хочете дізнатися як швидко набрати вагу без шкоди для здоров`я? У цій статті ми розповімо як збільшити масу тіла за короткий термін.</string>
    <string name="link5">ТРЕНАЖЕРНІ ЗАЛИ ТА ФІТНЕС КЛУБИ В УКРАЇНІ</string>
    <string name="link6">Інтернет-магазин спортивних тренажерів SPORTZAL</string>
    <string name="link7">ЕЛІТНИЙ ФІТНЕС КЛУБ ПРЕМІУМ КЛАСУ «5 ЕЛЕМЕНТ»</string>
    <string name="link8">Тренування для всього тіла в домашніх умовах</string>
    <string name="link9">Як Почати Займатися Початківцям? (КРАЩІ ФУНДАМЕНТАЛЬНІ ВПРАВИ!)</string>
    <string name="link10">Тренування на все тіло для новачків Прес, сідниці, ноги, спина, руки PopSport»</string>
    <string name="link11">Прагнення до здорового, красивого та яскравого способу життя. Тренуй тіло, впроваджуй нові звички, готуй корисну страву та харчуйся із задоволенням. Будь WOW!</string>
    <string name="link12">Дієта для лінивих: які правила допоможуть скинути зайву вагу без зусиль</string>
    <string name="link13">Как похудеть на 30 кг. Моя история похудения. Жиросжигатель</string>
    <string name="link14">Просте схуднення. Зрештою, відчуйте контроль над їжею.</string>
    <string name="link15">Врач-диетолог, нутрициолог Эксперт системы Анализа рисков и критических точек контроля пищевой безопасности (ХАССП). Врач - эксперт высшей категории в отрасли пищевой безопасности и нутрициологии.</string>
    <string name="title_pedometer">Крокомір</string>
    <string name="title_acceleration">Датчик прискорення</string>
    <string name="pedometer">Крокомір</string>
    <string name="number_of_steps">Кількість кроків:</string>
    <string name="pedometer_running">крокомір працює</string>
    <string name="pedometer_not_running">Крокомір зупинено</string>
    <string name="type_of_step">Тип кроку:</string>
    <string name="duration_of_step">Тривалість кроку:</string>
    <string name="acitvate_pedometer">Запустити крокомір</string>
    <string name="disable_pedometer">Зупинити крокомір</string>
    <string name="transfer_to_next_page_text">Переглянути результати</string>
    <string name="results">Результати</string>
    <string name="of_the_last_measurement">останнього вимірювання</string>
    <string name="total_steps">Загальна кількість кроків:</string>
    <string name="from_that">з цього...</string>
    <string name="walking_steps">Ходьба:</string>
    <string name="jogging_steps">Біг/швидка ходьба:</string>
    <string name="running_steps">Спринт:</string>
    <string name="total_distance">Загальна відстань:</string>
    <string name="average_speed">Середня швидкість:</string>
    <string name="average_frequency">Частота кроків:</string>
    <string name="burned_calories">Страчені калорії:</string>
    <string name="moving_time">Час руху:</string>
    <string name="walking">Ходьба</string>
    <string name="jogging">Біг підтюпцем</string>
    <string name="running">Запущено</string>
    <string name="live_data">Метрики в реальному часі</string>
    <string name="graph">Графік</string>
    <string name="details">Деталі</string>
    <string name="name">Ім`я:</string>

    <string name="manufacturer">Виробник:</string>
    <string name="version">Версія:</string>
    <string name="energy">Енергія:</string>
    <string name="resolution">Вирішення:</string>
    <string name="max_range">макс. Діапазон:</string>
    <string name="min_range">мін. Діапазон:</string>
    <string name="accuracy">Точність:</string>
    <string name="delay">Затримка:</string>
    <string name="kalorian">калорій</string>
    <string name="stepsmin">кроків/хв:</string>
    <string name="mc">м/с:</string>
    <string name="_1l">1Л</string>
    <string name="_0_5l">0.5Л</string>
    <string name="_0_33l">0.33Л</string>
    <string name="_0_25l">0.25Л</string>
    <string name="_0">0</string>
    <string name="wasdrank">Випито вами</string>
    <string name="hours">год</string>
    <string name="minutes">хв</string>
    <string name="seconds">с</string>
    <string name="totalDistance">м</string>
    <string name="Date">Дата: </string>
    <string name="_SM">См</string>
    <string name="_M">Метр</string>
    <string name="_D">Дюйм</string>
    <string name="_FT">Фут</string>
    <string name="_KG">Кг</string>
    <string name="_Funt">Фунт</string>
    <string name="_L">Л</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>